[package]
name = "python3-tokio-integration"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "pyo3_async"

[dependencies]
pyo3 = { version = "0.18.1", features = ["extension-module"] }
pyo3-asyncio = { version = "0.18.0", features = ["tokio-runtime"] }
reqwest = { version = "0.11.14", features = ["json"] }
tokio = "1.25.0"
